--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </select>
 
 </div>
-  <div id="result" class="result" style="display:none;">
+  <div id="result" class="result card-box" style="display:none;">
     <div id="resultText"></div>
     <div id="planText" class="plan-info"></div>
     <hr style="border:0; border-top:1px solid #ccc; margin:10px 0;">
