--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="icon.png" type="image/png">
   <link rel="apple-touch-icon" href="icon.png">
   <link rel="stylesheet" href="style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   
 </head>
 <body>
@@ -439,4 +439,5 @@ applyTheme();
 </script>
 
 </body>
+
 </html>
